change html,css code

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </div>
             </div>
 
-            <div class="card-gren">
+            <div class="card-green">
               <div class="card-block">
                 <h4>Kilograms:</h4>
                 <div id="kgOutput"></div>
